[iOS] Add snackbar for the copy action

This CL adds a snackbar for the copy action from the share menu.
It also consolidates metrics for the different actions of the share
menu.

Bug: 880030, 883642
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I9ad39ad2f4f9b34e4d26aacc12a9db1fb2364bb6
Reviewed-on: https://chromium-review.googlesource.com/1224311
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Reviewed-by: Peter Lee <pkl@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591320}