ios/chrome/browser/ui/activity_services/activities/bookmark_activity.mm
@@ -84,8 +84,6 @@ NSString* const kBookmarkActivityType = @"com.google.chrome.bookmarkActivity";
 }
 
 - (void)performActivity {
-  base::RecordAction(
-      base::UserMetricsAction("MobileShareActionBookmarkThisPage"));
   [self.dispatcher bookmarkPage];
   [self activityDidFinish:YES];
 }
