ios/chrome/browser/ui/activity_services/activities/find_in_page_activity.mm
@@ -66,7 +66,6 @@ NSString* const kFindInPageActivityType =
 }
 
 - (void)performActivity {
-  base::RecordAction(base::UserMetricsAction("MobileShareActionFindInPage"));
   [self.dispatcher showFindInPage];
   [self activityDidFinish:YES];
 }
