ios/chrome/browser/ui/activity_services/activities/reading_list_activity.mm
@@ -76,7 +76,6 @@ NSString* const kReadingListActivityType =
 }
 
 - (void)performActivity {
-  base::RecordAction(base::UserMetricsAction("MobileShareActionReadLater"));
   ReadingListAddCommand* command =
       [[ReadingListAddCommand alloc] initWithURL:_activityURL title:_title];
   [_dispatcher addToReadingList:command];
